# chitin

./: .gitignore  .npmrc  .oxlintrc.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  chitin-routes.example.yaml  chitin.yaml  chitin.yaml.sig  eslint.config.mjs  llms.txt  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  specs  tsconfig.base.json  tsconfig.json  vite.config.ts
python/analysis/: SPEC.md  __init__.py  __main__.py  analyzer.py  codex_mine.py  compatibility_profiles.py  compatibility_seed.py  debt.py  decisions.py  detect.py  draft.py  fingerprint_outcomes.py  floundering_calibration.py  investigate.py  llm_draft.py  loaders.py  models.py  operator_matrix.py  predict.py  project.json  pyproject.toml  refresh_stale.py  routing_elo.py  sentinel.py  skill_mine.py  souls.py  speckit_adapter.py  superpowers_adapter.py  swarm_health.py  swarm_runs.py  types.py  unified_spec.py  writers.py
python/analysis/proposals/: __init__.py  models.py  queue.py  regression.py  review.py  self_telemetry.py  versioned_policy.py
python/analysis/search_backends/: __init__.py  base.py  tavily.py
python/analysis/spec_adapter/: __init__.py  adapter.py  base.py  registry.py  speckit.py  speckit_adapter.py  superpowers.py  types.py
python/analysis/templates/: __init__.py  all.py  bounds_max_files_changed.py  bounds_max_lines_changed.py  default_deny_unknown.py  envelope_closed.py  lockdown.py  no_curl_pipe_bash.py  no_destructive_rm.py  no_force_push.py  no_git_merge_main.py  no_shell_chmod_777.py  no_shell_sudo.py  (+1 more)
python/argus/: HANDOFF.md  README.md  __init__.py  __main__.py  beliefs.py  cli.py  cross_detectors.py  cross_source_db.py  detectors.py  drift_detectors.py  findings.py  findings_cli.py  findings_store.py  git_ingest.py  indexer.py  judge.py  kanban_ingest.py  kernel.py  llm.py  log_detectors.py  log_ingest.py  logs.py  migrations.py  project.json  pyproject.toml  reporter.py  session_indexer.py  sources.py
python/chitin_telemetry/: HANDOFF.md  POLICY_ANALYSIS_SPEC.md  README.md  __init__.py  __main__.py  beliefs.py  cli.py  config.py  decisions.py  detect.py  detectors.py  draft.py  findings_cli.py  findings_store.py  gpu.py  indexer.py  judge.py  kernel.py  llm.py  llm_draft.py  loaders.py  logs.py  models.py  project.json  prompts.py  pyproject.toml  reporter.py  sources.py  telemetry.py  writers.py
(+2614 files in other folders)
