[project]
name = "chitin-analysis"
version = "0.1.0"
description = "Analysis layer for chitin gov-decisions and event chains"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "analysis",
    "analysis.proposals",
    "analysis.templates",
    "analysis.search_backends",
]
package-dir = {"analysis" = ".", "analysis.proposals" = "proposals", "analysis.templates" = "templates", "analysis.search_backends" = "search_backends"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
