[project]
name = "chitin-argus"
version = "0.1.0"
description = "Argus: read-only observatory for chitin governance, kanban, and agent surfaces"
requires-python = ">=3.11"
dependencies = [
    "chitin-analysis",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
argus = "argus.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["argus"]
package-dir = {"argus" = "."}

[tool.setuptools.package-data]
argus = ["systemd/*.service", "systemd/*.timer"]

[tool.uv.sources]
chitin-analysis = { path = "../analysis", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
